--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,13 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xmlns="http://java.sun.com/xml/ns/javaee"
-   xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-   id="WebApp_ID" version="3.0">
+<?xml version="1.0" encoding="UTF-8"?> 
+<web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd" version="2.4">
    <display-name>ServletCommune</display-name>
     
-   <servlet>
-    <servlet-name>insertMariage</servlet-name>
-    <servlet-class>etu966_harena.InsertMariage</servlet-class>
+    <servlet>
+        <servlet-name>insertMariage</servlet-name>
+        <servlet-class>etu966_harena.InsertMariage</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>insertMariage</servlet-name>
